# Hunter-Adams-RP2040-Demos

./: CMakeLists.txt
Audio/: CMakeLists.txt
Audio/brl4_KS_synth/: CMakeLists.txt  guitar_mini.c  vga16_graphics.c  vga16_graphics.h  vga16_serial_KS_DAC.c  vga16_serial_KS_basic.c  vga16_serial_KS_bowed.c  vga16_serial_KS_bowed_old.c  vga16_serial_PDE_DAC.c
Audio/c_Audio_Beep_Synthesis_Single_Core/: beep_beep.c
Audio/e_DMA_Demo/: dma-demo.c
PWM/: CMakeLists.txt
PWM/PWM_Demo/: CMakeLists.txt  pid.c  pwm-demo.c
Sensors/MPU6050_IMU_Demo/: CMakeLists.txt  imu_demo.c  pid.c  pid_cp0.c  week2_cp.c
VGA_Graphics/: CMakeLists.txt
VGA_Graphics/Animation_Demo/: CMakeLists.txt  animation.c  synthpad.c
VGA_Graphics/Lab2/: CMakeLists.txt  constant.h  fm.c  galton.c  keys.c  vga_synth_pad.c
VGA_Graphics/__MACOSX/: ._e_DMA_Demo
VGA_Graphics/__MACOSX/e_DMA_Demo/: ._dj.c  ._rgb.pio  ._vga16_graphics.c
VGA_Graphics/e_DMA_Demo/: CMakeLists.txt  dj.c  dj_working_no_toggle.c  dma-playback.c  karplus_strong.c  synthpad.c
VGA_Graphics/e_DMA_Demo_old/: CMakeLists.txt  dj.c  dj_guitar.c  dj_working_no_toggle.c  shared.h  synthpad.c
_demos_/: CMakeLists.txt
_demos_/Audio/b_Multicore_DDS_Demo/: CMakeLists.txt
_demos_/Audio/c_Audio_Beep_Synthesis_Single_Core/: CMakeLists.txt
_demos_/Audio/d_Audio_Beep_Synthesis_Multicore/: CMakeLists.txt  multitest.c
_demos_/Audio/e_DMA_Demo/: CMakeLists.txt
_demos_/Audio/f_Audio_FFT/: CMakeLists.txt  fft.c
_demos_/Basic_Demos/GPIO_Interrupt_Demo/: CMakeLists.txt
_demos_/Basic_Demos/Memory_Experiment/: CMakeLists.txt
_demos_/Bluetooth/GATT_Client/: CMakeLists.txt  pt_cornell_rp2040_v1_3_client.h
_demos_/Bluetooth/GATT_Server/: CMakeLists.txt
_demos_/Bootloaders/Serial_bootloader/Application/: CMakeLists.txt
_demos_/Bootloaders/Serial_bootloader/Bootloader/: CMakeLists.txt
_demos_/Bootloaders/Serial_worm/Application/: CMakeLists.txt
_demos_/Bootloaders/Serial_worm/Bootloader/: CMakeLists.txt
_demos_/Human_Input/Keypad/: CMakeLists.txt  keypad.c
_demos_/Human_Input/Resistive_Touchscreen_Demo/: CMakeLists.txt  trackpad.c
_demos_/Networking/CAN/: CMakeLists.txt
_demos_/Networking/UDP_Transmitter/: CMakeLists.txt
_demos_/PWM/AM_Radio_Beacon/: CMakeLists.txt
_demos_/PWM/AM_Radio_Voice/: CMakeLists.txt
_demos_/Protothreads/Protothreads_Demo/: CMakeLists.txt
_demos_/Sensors/MPU6050_IMU_Demo/: CMakeLists.txt  imu_demo.c
_demos_/Stepper_Motors/Delta_Robot_Demo/: CMakeLists.txt
_demos_/Stepper_Motors/Stepper_Position_And_Speed_Control/: CMakeLists.txt
_demos_/Stepper_Motors/Stepper_Position_Control/: CMakeLists.txt
_demos_/Stepper_Motors/Stepper_Speed_Control/: CMakeLists.txt
_demos_/VGA_Graphics/Animation_Demo/: CMakeLists.txt
_demos_/VGA_Graphics/Barnsley_Fern/: CMakeLists.txt  barnsley_fern.c
_demos_/VGA_Graphics/Game_of_Life/: CMakeLists.txt  conway.c  vga16_graphics.c  vga16_graphics.h
_demos_/VGA_Graphics/Mandelbrot_Set/: CMakeLists.txt  mandelbrot_fixvfloat.c
_demos_/VGA_Graphics/VGA_Fonts_and_Colors/: CMakeLists.txt  vga16_graphics_font.c
_demos_/VGA_Graphics/VGA_Graphics_Primitives/: CMakeLists.txt  vga_graphics_demo.c
_lab1/: CMakeLists.txt  keypad-beep.c
